// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput should render input 1`] = `
<div>
  <input
    class="input-root form-control"
    type="text"
    value=""
  />
</div>
`;

exports[`MaskedInput should render with mask showing 1`] = `
<div>
  <input
    class="input-root form-control"
    type="text"
    value=""
  />
</div>
`;

exports[`MaskedInput should succeed with a specific mask 1`] = `
<div>
  <input
    class="input-root form-control"
    type="text"
    value="123"
  />
</div>
`;
